# ESMM-Research

./: .gitignore  B_TRANSPOSE_ANALYSIS.md  CLAUDE.md  CMakeLists.txt  HYBRID_VISUALIZATION.md  JOINT_AB_SPARSITY_SETUP.md  KERNEL_VISUALIZATION.md  KernelWalkthrough.md  LICENSE  MEMORY_COALESCING_ANALYSIS.md  Makefile  PAPER_WRITING_GUIDE.md  PROJECT_STATE.md  README.md  cpu_basic.cpp  cpu_threading  cpu_threading.cpp  cpu_threading.cu  cusparse_bench  data.py  driver  driver.cu  esmm.cu  esmm_analysis.json  esmm_buffered.cu  esmm_buffered_tune.cu  esmm_offsets.cu  esmm_preprocessed.cu  esmm_preprocessed_rowlevel.cu  esmm_results.json  esmm_warpskipping.cu  esmm_workqueue.cu  g  gb  gbd  gpd  gpu_basic  gpu_basic.cu  gpu_basic32.cu  gpu_basic_dimmed.cu  (+50 more)
archive/headers/: pattern_functions_bk8.cuh
archive/kernels/: clustered_sparse_gemm.cu  esmm_a_sparse_skip.cu  esmm_ab_8x32_db.cu  esmm_ab_8x8.cu  esmm_ab_fused.cu  esmm_ab_fused_pipeline.cu  esmm_ab_fused_pipeline_branchless.cu  esmm_b_sparse_wn.cu  esmm_offsets.cu
archive/old_kernels/: 1D_Blocktiling.cu  1d_warptiling.cu  esmm_buffered.cu  smem_blocking.cu
archive/preprocessors/: b_preprocessor_wn_uniform.cu
benchmarks/paper_data/: cusparse_4096.csv  cusparse_scaling.csv
custom_kernels/: aggregated_data.csv  performance_data.csv  runtime.sh
docs/: KERNELS.md  KERNEL_WALKTHROUGH.md  blockwise_generation.md  count_offset_analysis.md  count_offset_design.md  hybrid_kernel_analysis.md  understanding_benchmark_csvs.md
docs/archived_experiments/: k25_26_27_skip_experiments.cu
docs/plans/: 2026-02-18-roofline-cusparse-design.md  2026-02-18-roofline-cusparse-impl.md  2026-03-03-figure-fixes.md
early_termination/: early_termination  early_termination.cu  et2.cu
esmm_unrolled/: esmm_unrolled_1.cu  esmm_unrolled_2.cu  esmm_unrolled_4.cu  esmm_unrolled_6.cu  esmm_unrolled_8.cu
grid_size_overhead/: grid_tests
include/: b_pattern_optimized.cuh  b_pattern_specialized.cuh  b_sparse_helpers.cuh  metadata.cuh  pattern_lut.cuh  preprocess_params.cuh  runners.cuh  unrolled_inners.cuh  utils.cuh
kernels/: 1D_Blocktiling.cu  1D_vec.cu  1d_warptiling.cu  1d_warptiling_tm.cu  1d_warptiling_tn.cu  2D_Blocktiling.cu  basic.cu  gmem_coalesce.cu  multi.cu  multi2.cu  multi3.cu  prod.cu  prod2.cu  smem_blocking.cu  vectorized_1D_blocktiling.cu  vectorized_blocktiling.cu  warptiling.cu  warptiling_two.cu
old_kernels/: 2D_Blocktiling.cu  basic.cu  esmm_buffered.cu  esmm_combined_opt.cu  esmm_hybrid_btrans.cu  esmm_hybrid_combined.cu  esmm_joint_1d.cu  esmm_joint_precomputed.cu  esmm_joint_shared.cu  esmm_offset_combined.cu  esmm_pattern_specialized.cu  esmm_warpskipping.cu  vectorized_blocktiling.cu
old_tests/: cpu_basic.cu  cpu_threading.cu  gpu_basic_flipped.cu  gpu_sparsity.cu  gpu_sparsity_flipped.cu
old_tests/custom_kernels/: ck  test_ck.cu
old_tests/early_termination/: et2  test.sh
old_tests/grid_size_overhead/: grid_benchmark.sh  grid_tests.cu
preprocessors/: a_preprocessor.cu  a_preprocessor_rowlevel.cu
profiles/: profile.txt  profile_multi3.txt  summary1024.txt  summary2048.txt  summary256.txt  summary4096.txt  summary512.txt
results/: paper_report.md
scripts/: analyze_real_weights.py  benchmark.py  benchmark_ab_real.py  benchmark_all_ab_combinations.sh  benchmark_real_weights.py  consolidate_ab_results.py  generate_pattern_functions.py  generate_pattern_lut.py  merge_real_weights_csv.py  run_ab_qk_sweep.sh  run_cross_perm_sweep.sh  run_cublas_baseline.py  run_cusparse_baseline.py  summarize_ab_results.py
scripts/experiments/: 01_collect_figure1_data.sh  02_collect_figure2_data.sh  03_collect_figure3_data.sh  04_collect_figure4_data.sh  05_collect_figure5_data.sh  06_collect_cusparse_data.sh  K25_UPDATES_SUMMARY.md  README.md  plot_cusparse_comparison.py  plot_figure1.py  plot_figure2.py  plot_figure3.py  plot_figure4.py  plot_figure5.py  plot_roofline.py  run_all_experiments.sh  run_from_figure3.sh  run_resume_experiments.sh
scripts/paper/: paper_style.py  plot_all_new_figures.sh  plot_fig1_performance.py  plot_fig1_skip_hierarchy.py  plot_fig2_ablation.py  plot_fig2_ktile_layout.py  plot_fig3_breakdown_scaling.py  plot_fig3_speedup.py  plot_fig4_ablation.py  plot_fig4_roofline.py  plot_fig5_skiprates.py  plot_fig6_realweights.py
src/benchmarks/: cusparse_benchmark.cu
src/kernels/: b_pattern_dispatch.cuh  esmm.cu  esmm_a_sparse.cu  esmm_a_sparse_skip.cu  esmm_ab_16x8.cu  esmm_ab_32x32.cu  esmm_ab_8x32.cu  esmm_ab_compressed_k.cu  esmm_ab_fused_pipeline.cu  esmm_ab_gmem_32.cu  esmm_ab_opt.cu  esmm_ab_optimized_v2.cu  esmm_ab_optimized_v2_baseline.cu  esmm_ab_optimized_v3.cu  esmm_ab_simple_fused.cu  esmm_ab_sparse.cu  esmm_ab_sparse_optimized.cu  esmm_ab_turbo.cu  esmm_b_fp_lut.cu  esmm_b_smem_transpose.cu  esmm_b_sparse.cu  esmm_b_sparse_offsets.cu  esmm_b_sparse_tn.cu  esmm_b_sparse_warp.cu  esmm_b_sparse_wn.cu  esmm_b_transpose_k19.cu  esmm_btranspose.cu  esmm_btranspose_offset.cu  esmm_combined_opt.cu  esmm_countoffset.cu  esmm_countoffset_v2.cu  esmm_hybrid.cu  esmm_hybrid_combined.cu  esmm_hybrid_combined_opt.cu  esmm_hybrid_combined_v2.cu  esmm_joint_1d.cu  esmm_joint_precomputed.cu  esmm_joint_skip_experiments.cu  esmm_pattern_specialized.cu  esmm_preprocessed.cu  (+4 more)
src/preprocessors/: a_preprocessor.cu  ab_preprocessor.cu  (+13 more)
tests/: check_patterns.cu  test_b_preprocess  test_b_preprocess.cu  test_benchmark_ab_real.py
tuner_results/: buffered_cache_1024x1024x1024.json  buffered_cache_512x512x512.json  esmm_1024x1024x1024.json  esmm_2048x2048x2048.json  esmm_512x512x512.json
tuning/: B_SPARSITY_ANALYSIS.md  B_SPARSITY_DEEP_DIVE.md  K17_TUNING_RESULTS.md  PERFORMANCE_ANALYSIS.md  PREPROCESSOR_TUNING_COMPILATION.md  analyze_configs.py  esmm_hybrid_tune.cu  esmm_tune.cu  preprocessor_results.json  results_a_sparse_wm32.json  temp_bcz4ksxe.cu  temp_thxmb87z.cu  tune_preprocessor.py  tuner.py  tuner_a_sparse_wm32.py  tuner_k17.py  tuner_preprocessor.py
(+16 files in other folders)
